Fix paragraph spacing

--- a/_sass/kankoda/site/global.scss
+++ b/_sass/kankoda/site/global.scss
@@ -61,6 +61,7 @@ h2 {
 p {
   font-size: 1.2em;
   font-weight: 300;
+  margin-bottom: var(--paragraph-spacing);
 }
 
 
