--- a/_sass/kankoda/variables.scss
+++ b/_sass/kankoda/variables.scss
@@ -47,6 +47,8 @@
 
   --grid-gap: 20px;
 
+  --paragraph-spacing: 20px;
+
   --wrapper-width: 900px;
   --wrapper-width-wide: 1250px;
   --wrapper-width-narrow: 650px;
